// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PremiumLoginPanel matches snapshot when logged in with GitHub 1`] = `
<div
  className="panel"
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <div
    className="panel-body"
    style={
      Object {
        "padding": "0 15px",
        "position": "relative",
      }
    }
  >
    <CSSTransitionGroup
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={1000}
      transitionLeave={true}
      transitionLeaveTimeout={1000}
      transitionName="logged-in"
    >
      <div
        className="logged-in github"
      >
        <div>
          <div
            className="logo"
          >
            <Icon
              style={
                Object {
                  "marginTop": 0,
                }
              }
            />
          </div>
          <div
            className="text"
          >
            <h1>
              <TextFit
                autoResize={true}
                forceSingleModeWidth={true}
                max={100}
                min={1}
                mode="single"
                onReady={[Function]}
                throttle={50}
              >
                Hello 
                Martijn Hols
                .
              </TextFit>
            </h1>
            <div
              className="description"
            >
              You haven't unlocked Premium yet. See the panel to the right for more info.
            </div>
            <div
              className="logout"
            >
              <a
                href="/logout"
                onClick={[Function]}
              >
                <Icon />
                 Logout
              </a>
            </div>
          </div>
        </div>
      </div>
    </CSSTransitionGroup>
    <div
      className="row image-background"
      style={
        Object {
          "paddingBottom": 15,
          "paddingTop": 300,
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "pointerEvents": "none",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <CyclingVideo
          style={
            Object {
              "height": "100%",
              "objectFit": "cover",
              "width": "100%",
            }
          }
          videos={
            Array [
              "https://media.giphy.com/media/7TqE3VIAU2odkmneHU/giphy.mp4",
              "https://media.giphy.com/media/5kFzxK6ENfjrcoMgt1/giphy.mp4",
              "https://media.giphy.com/media/PoCoePEEB1EC6buvFU/giphy.mp4",
              "https://media.giphy.com/media/8cv2DoGyUClMuCKalT/giphy.mp4",
              "https://media.giphy.com/media/fUZW0LIJhtbDnBtqkX/giphy.mp4",
              "https://media.giphy.com/media/2erqKiXvYpXeGH9XJ5/giphy.mp4",
            ]
          }
        />
      </div>
      <div
        className="col-md-12"
      >
        <h1>
          Premium sign in
        </h1>
        <div
          className="description"
        >
          Sign in with your Patreon or GitHub account using the buttons below.
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-6"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <a
          className="btn btn-block patreon-login"
          href="/login/patreon"
        >
          <Icon />
           Patreon
        </a>
      </div>
      <div
        className="col-lg-6"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <a
          className="btn btn-block github-login"
          href="/login/github"
        >
          <Icon />
           GitHub
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PremiumLoginPanel matches snapshot when logged in with Patreon 1`] = `
<div
  className="panel"
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <div
    className="panel-body"
    style={
      Object {
        "padding": "0 15px",
        "position": "relative",
      }
    }
  >
    <CSSTransitionGroup
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={1000}
      transitionLeave={true}
      transitionLeaveTimeout={1000}
      transitionName="logged-in"
    >
      <div
        className="logged-in patreon"
      >
        <div>
          <div
            className="logo"
          >
            <Icon
              style={
                Object {
                  "marginTop": 0,
                }
              }
            />
          </div>
          <div
            className="text"
          >
            <h1>
              <TextFit
                autoResize={true}
                forceSingleModeWidth={true}
                max={100}
                min={1}
                mode="single"
                onReady={[Function]}
                throttle={50}
              >
                Hello 
                Martijn Hols
                .
              </TextFit>
            </h1>
            <div
              className="description"
            >
              You haven't unlocked Premium yet. See the panel to the right for more info.
            </div>
            <div
              className="logout"
            >
              <a
                href="/logout"
                onClick={[Function]}
              >
                <Icon />
                 Logout
              </a>
            </div>
          </div>
        </div>
      </div>
    </CSSTransitionGroup>
    <div
      className="row image-background"
      style={
        Object {
          "paddingBottom": 15,
          "paddingTop": 300,
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "pointerEvents": "none",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <CyclingVideo
          style={
            Object {
              "height": "100%",
              "objectFit": "cover",
              "width": "100%",
            }
          }
          videos={
            Array [
              "https://media.giphy.com/media/7TqE3VIAU2odkmneHU/giphy.mp4",
              "https://media.giphy.com/media/5kFzxK6ENfjrcoMgt1/giphy.mp4",
              "https://media.giphy.com/media/PoCoePEEB1EC6buvFU/giphy.mp4",
              "https://media.giphy.com/media/8cv2DoGyUClMuCKalT/giphy.mp4",
              "https://media.giphy.com/media/fUZW0LIJhtbDnBtqkX/giphy.mp4",
              "https://media.giphy.com/media/2erqKiXvYpXeGH9XJ5/giphy.mp4",
            ]
          }
        />
      </div>
      <div
        className="col-md-12"
      >
        <h1>
          Premium sign in
        </h1>
        <div
          className="description"
        >
          Sign in with your Patreon or GitHub account using the buttons below.
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-6"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <a
          className="btn btn-block patreon-login"
          href="/login/patreon"
        >
          <Icon />
           Patreon
        </a>
      </div>
      <div
        className="col-lg-6"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <a
          className="btn btn-block github-login"
          href="/login/github"
        >
          <Icon />
           GitHub
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PremiumLoginPanel matches snapshot when logged out 1`] = `
<div
  className="panel"
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <div
    className="panel-body"
    style={
      Object {
        "padding": "0 15px",
        "position": "relative",
      }
    }
  >
    <CSSTransitionGroup
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={1000}
      transitionLeave={true}
      transitionLeaveTimeout={1000}
      transitionName="logged-in"
    />
    <div
      className="row image-background"
      style={
        Object {
          "paddingBottom": 15,
          "paddingTop": 300,
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "pointerEvents": "none",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <CyclingVideo
          style={
            Object {
              "height": "100%",
              "objectFit": "cover",
              "width": "100%",
            }
          }
          videos={
            Array [
              "https://media.giphy.com/media/7TqE3VIAU2odkmneHU/giphy.mp4",
              "https://media.giphy.com/media/5kFzxK6ENfjrcoMgt1/giphy.mp4",
              "https://media.giphy.com/media/PoCoePEEB1EC6buvFU/giphy.mp4",
              "https://media.giphy.com/media/8cv2DoGyUClMuCKalT/giphy.mp4",
              "https://media.giphy.com/media/fUZW0LIJhtbDnBtqkX/giphy.mp4",
              "https://media.giphy.com/media/2erqKiXvYpXeGH9XJ5/giphy.mp4",
            ]
          }
        />
      </div>
      <div
        className="col-md-12"
      >
        <h1>
          Premium sign in
        </h1>
        <div
          className="description"
        >
          Sign in with your Patreon or GitHub account using the buttons below.
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-6"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <a
          className="btn btn-block patreon-login"
          href="/login/patreon"
        >
          <Icon />
           Patreon
        </a>
      </div>
      <div
        className="col-lg-6"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <a
          className="btn btn-block github-login"
          href="/login/github"
        >
          <Icon />
           GitHub
        </a>
      </div>
    </div>
  </div>
</div>
`;
